Fixed not showing Succes Message. Onclick also deletes error and succes messages. Added message styling

--- a/src/components/NewPassword/NewPassword.css
+++ b/src/components/NewPassword/NewPassword.css
@@ -16,3 +16,12 @@
     font-size: 0.9em;
     font-weight: bold;
 }
+.password-error,
+.password-success{
+    background-color: pink;
+    border-radius: 20px;
+    width: 15em;
+    padding: 2em;
+    /*font-family: pixelate, sans-serif;*/
+
+}
